fix: layout shifting

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,13 +5,13 @@
 }
 
 html {
-	height: 100%;
+	min-height: 100%;
 }
 
 body {
 	font-family: "JetBrainsMono-Regular", monospace;
 	background: #121212;
-	height: 100%;
+	min-height: 100%;
 }
 
 h1,
